Fullscreen button spacing issue - resolved

--- a/nocout/nocout/static/css/nocout_default.css
+++ b/nocout/nocout/static/css/nocout_default.css
@@ -339,6 +339,9 @@ iframe {
 .vAlign_middle {
   vertical-align: middle !important;
 }
+th.vAlign_middle, .vAlign_middle b {
+  font-weight: 600 !important;
+}
 .one_fourth_column {
   width: 25%;
 }
@@ -660,4 +663,7 @@ table.dataTable {
 .left_tabs_container > li > a {
   border: 0px none;
   border-bottom: 3px solid transparent;
+}
+#goFullScreen {
+  margin-left: -4px;
 }
